# game-of-greed

./: README.md  pyproject.toml
game_of_greed/: banker.py  game.py  game_logic.py  game_of_greed.py  player_bot.py
tests/: flo.py  test_banker.py  test_game.py  test_game_logic.py  test_game_of_greed.py  test_proof_of_life.py
tests/flo/: bank_first_for_two_rounds.txt  bank_one_roll_then_quit.txt  bank_with_two_rounds.txt  cheat_and_fix.txt  do_wanna_play_then_quit.txt  flo.py  hot_dice.txt  living_on_the_edge.txt  zilch.txt
