[tool.poetry]
name = "game-of-greed"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
